--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -2,6 +2,7 @@ add_subdirectory(airy)
 add_subdirectory(control)
 add_subdirectory(lorenz)
 add_subdirectory(multithread)
+add_subdirectory(pendulum)
 add_subdirectory(sampling)
 add_subdirectory(script)
 add_subdirectory(spring-damper)
