--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -7,3 +7,4 @@ add_subdirectory(pendulum)
 add_subdirectory(sampling)
 add_subdirectory(script)
 add_subdirectory(spring-damper)
+add_subdirectory(system)
