--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,10 +1,10 @@
 add_subdirectory(airy)
+add_subdirectory(complex-system)
 add_subdirectory(control)
+add_subdirectory(discrete-sampling)
 add_subdirectory(lorenz)
-add_subdirectory(multithread)
+add_subdirectory(multithreaded-control)
 add_subdirectory(ordering)
 add_subdirectory(pendulum)
-add_subdirectory(sampling)
 add_subdirectory(script)
 add_subdirectory(spring-damper)
-add_subdirectory(system)
