--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -2,6 +2,7 @@ add_subdirectory(airy)
 add_subdirectory(complex-system)
 add_subdirectory(control)
 add_subdirectory(discrete-sampling)
+add_subdirectory(json)
 add_subdirectory(lorenz)
 add_subdirectory(multithreaded-control)
 add_subdirectory(ordering)
